# UQPCE

./: pyproject.toml  readme.md
uqpce/: __main__.py
uqpce/src/PCE_Codes/: custom_enums.py  graphs.py  io.py  pbox.py  report.py  uqpce.py  utility.py
uqpce/src/PCE_Codes/stats/: statistics.py
uqpce/src/PCE_Codes/variables/: continuous.py  discrete.py
uqpce/tests/: check_verification_cases.py
uqpce/tests/test_uqpce/: test_continuous_variables.py  test_discrete_variable.py  test_helpers.py  test_pbox.py  test_statistics.py  test_uqpce.py
uqpce/wrappers/uqpce_wrapper/src/uqpce_wrapper/: __main__.py
